[package]
name = "test_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
env_logger = "0.10.0"
futures = "0.3.28"
http = "0.2.9"
hyper = { version = "0.14.27", features = ["client", "server", "tcp", "http1"] }
log = "0.4.19"
smol = "1.3.0"
tokio = { version = "1.30.0", features = ["macros", "rt-multi-thread"] }
